[package]
name = "kaomji-ru"
version = "1.0.0"
edition = "2021"
description = "The full http://kaomoji.ru database, encoded and escaped as byte literals"
license = "MIT"
readme = "README.md"
repository = "https://github.com/StratusFearMe21/kaomoji-ru"
keywords = ["kaomoji", "japanese", "uwu", "owo", "anime"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
